--- a/index.html
+++ b/index.html
@@ -45,15 +45,14 @@
 </head>
 <body>
     <div class="container">
-        <h1>Tarot & Witchcraft Services</h1>
-        <p>Unlock the mysteries of the universe with my tarot readings and witchcraft services.</p>
+        <h1>Servicios de Tarot y Brujería</h1>
+        <p>¡Bienvenido a mi sitio web! Aquí encontrarás enlaces a mis diferentes redes sociales, así como un formulario para contactarme y agendar lecturas de tarot u otros trabajos místicos. Explora y conecta conmigo para descubrir los mensajes que el universo tiene para ti. ✨🔮</p>
         
         <div class="socials">
             <h2>Follow Me</h2>
             <a href="#" id="instagram">Instagram</a>
             <a href="#" id="facebook">Facebook</a>
-            <a href="#" id="tiktok">TikTok</a>
-            <a href="#" id="website">Website</a>
+            <a href="https://www.tiktok.com/@mich.witch" id="tiktok">TikTok</a>
         </div>
         
         <div class="qr-code">
