--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         
         <div class="qr-code">
             <h2>Scan to Connect</h2>
-            <img src="your-qrcode-url.png" alt="QR Code" width="200">
+            <img src="Logo.png" alt="QR Code" width="200">
         </div>
         
         <div class="booking-form">
