--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
             <a href="#" id="facebook">Facebook</a>
             <a href="https://www.tiktok.com/@mich.witch" id="tiktok">TikTok</a>
         </div>
+
+        <p>No dudes en enviarme un mensaje directo a través de mis redes sociales o en completar el formulario de Google
+        a continuación para cualquier consulta. ¡Estoy aquí para ayudarte cuando lo necesites! </p>
         
         <div class="qr-code">
             <h2>Scan to Connect</h2>
