--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         
         <div class="qr-code">
             <h2>Scan para el formulario de consultas</h2>
-            <img src="Logo.png" alt="QR Code" width="200">
+            <img src="QRcode form.png" alt="QR Code" width="200">
         </div>
         <p>O click aqui directamente por el formulario! </p>
         <a href="https://docs.google.com/forms/d/e/1FAIpQLScjjVL_HSAUczW1NWO2Vdkuyz72h1d35nMExYNhNAV5KkgDiA/viewform?usp=header"><button>Consultas</button></a>
