--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 </head>
 <body>
     <div class="container">
+        <h1>Mich Witch</h1>
         <h1>Servicios de Tarot y Brujería</h1>
         <p>¡Bienvenido a mi sitio web! Aquí encontrarás enlaces a mis diferentes redes sociales, así como un formulario para contactarme y agendar lecturas de tarot u otros trabajos místicos. Explora y conecta conmigo para descubrir los mensajes que el universo tiene para ti. ✨🔮</p>
         
@@ -62,7 +63,7 @@
             <h2>Scan para el formulario de consultas</h2>
             <img src="QRcode form.png" alt="QR Code" width="200">
         </div>
-        <p>O click aqui directamente por el formulario! </p>
+        <p>Click aqui directamente por el formulario! </p>
         <a href="https://docs.google.com/forms/d/e/1FAIpQLScjjVL_HSAUczW1NWO2Vdkuyz72h1d35nMExYNhNAV5KkgDiA/viewform?usp=header"><button>Consultas</button></a>
         
     </div>
