--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
             border-radius: 5px;
         }
         .booking-form button {
-            padding: 10px;
+            padding: 20px 30px; 
+            font-size: 18px;    
             background: #ffcc00;
             border: none;
             cursor: pointer;
