--- a/index.html
+++ b/index.html
@@ -65,8 +65,9 @@
             <img src="QRcode form.png" alt="QR Code" width="200">
         </div>
         <p>Click aqui directamente por el formulario! </p>
+        <div class="booking-form button">
         <a href="https://docs.google.com/forms/d/e/1FAIpQLScjjVL_HSAUczW1NWO2Vdkuyz72h1d35nMExYNhNAV5KkgDiA/viewform?usp=header"><button>Consultas</button></a>
-        
+        </div>
     </div>
 </body>
 </html>
